@@ -23,6 +23,10 @@
 #endif
 #include "mlvalues.h"
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 CAMLextern value caml_callback (value closure, value arg);
 CAMLextern value caml_callback2 (value closure, value arg1, value arg2);
 CAMLextern value caml_callback3 (value closure, value arg1, value arg2,
@@ -45,5 +49,9 @@ CAMLextern void caml_main (char ** argv);
 CAMLextern void caml_startup (char ** argv);
 
 CAMLextern int caml_callback_depth;
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif
